--- a/BlackBox.ipynb
+++ b/BlackBox.ipynb
@@ -1,150 +1,142 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "fKlWxV0s76Wt"
-   },
-   "outputs": [],
-   "source": [
-    "from lsh import LSH\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_fvecs(fp):\n",
-    "    a = np.fromfile(fp, dtype='int32')\n",
-    "    d = a[0]\n",
-    "    return a.reshape(-1, d+1)[:, 1:].copy().view('float32')\n",
-    "\n",
-    "# 1M samples\n",
-    "xb = read_fvecs('./sift/sift_base.fvecs')\n",
-    "# queries\n",
-    "xq = read_fvecs('./sift/sift_query.fvecs')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "id": "sb-x0XtQBBUk"
-   },
-   "outputs": [],
-   "source": [
-    "points = xb\n",
-    "queries = points[:1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ShH5Nqt1iwNS",
-    "outputId": "f8e9f022-4769-4f8f-a32a-25e588a32f22"
-   },
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please select any Algorithm: \n",
-      " 1 - Product Quantization \n",
-      " 2 - Locality Sensitive Hashing \n",
-      " 3 - Scalable Nearest Neighbours \n",
-      " 4 - Hierarchical Navigable Small Worlds \n",
-      " 5 - Optimized Product Quantization \n",
-      "2\n"
-     ]
+      "cell_type": "code",
+      "source": [
+        "!pip install -q scann\n",
+        "!pip install faiss-gpu\n",
+        "import faiss\n",
+        "import scann"
+      ],
+      "metadata": {
+        "id": "6zoAEAX3rzN8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "fKlWxV0s76Wt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9857ed16-70ac-44e9-f9c6-a14869add843"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<faiss.swigfaiss.HNSW; proxy of <Swig Object of type 'faiss::HNSW *' at 0x7f52a4472dc0> >\n"
+          ]
+        }
+      ],
+      "source": [
+        "from lsh import LSH\n",
+        "from scann_algo import ScaNN_Algo\n",
+        "from pq import PQ\n",
+        "from hnsw import HNSW\n",
+        "from opq import OPQ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "o7TLpVpBAzSE"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import shutil\n",
+        "import urllib.request as request\n",
+        "from contextlib import closing\n",
+        "\n",
+        "# first we download the Sift1M dataset\n",
+        "with closing(request.urlopen('ftp://ftp.irisa.fr/local/texmex/corpus/sift.tar.gz')) as r:\n",
+        "    with open('sift.tar.gz', 'wb') as f:\n",
+        "        shutil.copyfileobj(r, f)\n",
+        "import tarfile\n",
+        "\n",
+        "# the download leaves us with a tar.gz file, we unzip it\n",
+        "tar = tarfile.open('sift.tar.gz', \"r:gz\")\n",
+        "tar.extractall()\n",
+        "def read_fvecs(fp):\n",
+        "    a = np.fromfile(fp, dtype='int32')\n",
+        "    d = a[0]\n",
+        "    return a.reshape(-1, d + 1)[:, 1:].copy().view('float32')\n",
+        "\n",
+        "# 1M samples\n",
+        "xb = read_fvecs('./sift/sift_base.fvecs')\n",
+        "# queries\n",
+        "xq = read_fvecs('./sift/sift_query.fvecs')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "sb-x0XtQBBUk"
+      },
+      "outputs": [],
+      "source": [
+        "points = xb\n",
+        "queries = points[:1000]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "UXDk5ZBwjZDK"
+      },
+      "outputs": [],
+      "source": [
+        "Algorithms = []\n",
+        "Algorithms.append(PQ)\n",
+        "Algorithms.append(LSH)\n",
+        "Algorithms.append(ScaNN_Algo)\n",
+        "Algorithms.append(HNSW)\n",
+        "Algorithms.append(PQ)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ShH5Nqt1iwNS"
+      },
+      "outputs": [],
+      "source": [
+        "Algo_idx = int(input(\"Please select any Algorithm: \\n 1 - Product Quantization \\n 2 - Locality Sensitive Hashing \\n 3 - Scalable Nearest Neighbours \\n 4 - Hierarchical Navigable Small Worlds \\n 5 - Optimized Product Quantization \\n\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hFD-ouFBjrZN"
+      },
+      "outputs": [],
+      "source": [
+        "Algorithms[Algo_idx-1](points,queries)"
+      ]
     }
-   ],
-   "source": [
-    "Algo_idx = int(input(\"Please select any Algorithm: \\n 1 - Product Quantization \\n 2 - Locality Sensitive Hashing \\n 3 - Scalable Nearest Neighbours \\n 4 - Hierarchical Navigable Small Worlds \\n 5 - Optimized Product Quantization \\n\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "id": "UXDk5ZBwjZDK"
-   },
-   "outputs": [],
-   "source": [
-    "Algorithms = []\n",
-    "Algorithms.append(LSH)\n",
-    "Algorithms.append(LSH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
+  ],
+  "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/"
+      "provenance": []
     },
-    "id": "hFD-ouFBjrZN",
-    "outputId": "e78a850d-60bb-4a09-ed40-987e28b5a95b"
-   },
-   "outputs": [],
-   "source": [
-    "Algorithms[Algo_idx-1](points,queries)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
     },
-    "id": "HAxqxYnMDDWZ",
-    "outputId": "53eec1fc-de06-4526-ab7d-b062dd702c30"
-   },
-   "outputs": [],
-   "source": [
-    "LSH(points,queries)"
-   ]
+    "language_info": {
+      "name": "python"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "_CW37xFqBopr"
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
