--- a/BlackBox.ipynb
+++ b/BlackBox.ipynb
@@ -37,8 +37,7 @@
         "from lsh import LSH\n",
         "from scann_algo import ScaNN_Algo\n",
         "from pq import PQ\n",
-        "from hnsw import HNSW\n",
-        "from opq import OPQ"
+        "from hnsw import HNSW"
       ]
     },
     {
